target updated and model update

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
     </script>
     <style>
         canvas {
-          background-image: url("/astro/assets/background.webp");
+          background-image: url("/assets/background.webp");
           background-size: cover;
           background-position: center center;
           background-attachment: fixed;
 
-          cursor: url("/astro/assets/cursor2.png"), auto;
+          cursor: url("/assets/cursor2.png"), auto;
         }
         body{
           margin:0;
