--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       margin-bottom: 25px;
     }
     </style>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./src/index.js"></script>
     <script>
       function restart(){
         document.querySelector('canvas').setAttribute('restart',true)
